<resources>
    <string name="app_name">Real Madrid</string>
    <string name="Manager">Manager(Coach)</string>
    <string name="Player">Players</string>
    <string name="Quiz">quiz</string>
    <string name="nextMatch">Next Match</string>
    <string name="zizo_story">"On 4 January 2016, Real Madrid announced Zidane was appointed the new manager of the club on a two-and-a-half-year deal.In his first El Clásico as a manager, held on 2 April at the Camp Nou, Zidane led his club to a 2–1 win over Barcelona to end Barça\'s 39-match unbeaten run.Zidane thus became the first Real Madrid manager to win his first Clásico match since Bernd Schuster in December 2007.Real Madrid finished runners up, just one point behind Barcelona, in La Liga.In the Champions League final on 28 May, Real Madrid defeated fellow Madrid club Atlético Madrid in a penalty shootout. Zidane became the seventh man to win the European Cup/UEFA Champions League as both a player and a manager, the second man (after Miguel Muñoz) to win the trophy with Real Madrid as both a player and a manager, and the first French manager, except the French-Argentinian Helenio Herrera, to win the trophyOn 18 December 2016, Real Madrid defeated Japanese club Kashima Antlers 4–2 in the final of the 2016 FIFA Club World CupOn 12 January 2017, Madrid\'s draw against Sevilla FC in the second leg of the Copa del Rey round of 16 saw him with 40 consecutive matches without a loss - creating a new Spanish record, beating Luis Enrique\'s record of 39 matches undefeated with Barcelona.On 3 June 2017, Zidane led Real Madrid to a 4–1 win against Italian side Juventus in the 2017 UEFA Champions League Final. This victory meant that Madrid were the first ever team to win the Champions League twice in a row and that Zidane led Real Madrid to La Liga and the Champions League.After a rough preseason in July with losses against Manchester United, Manchester City and Barcelona in friendlies, Real Madrid went on to win the UEFA Supercup against Manchester United after a 2-1 fixture on August 8. This meant Zidane was the first manager to win two UEFA Supercups in a row since Arrigo Sacchi's Milan in 1990. Five days later, Real Madrid beat Barcelona at the Camp Nou 1-3 in the first leg of the Spanish Supercup. Three days later, Real Madrid were again victorious against Barcelona in the second leg after beating the Catalans 2-0, ending a 24 consecutive scoring record of Barcelona in Clásico matches, and with a 5-1 aggregate score. This title tied Zidane with Vicente del Bosque as the third most successful manager with 7 titles, one short of Luis Molowny but still 7 away from Miguel Muñoz. This also meant that at the time Zidane had won as many titles in his managerial position in Real Madrid as games lost during his tenure."</string>
    <string name="Team">About Real Madrid</string>
    <string name="news">News</string>
    <string name="chooseyournews">Choose The News Source</string>
    <string name="marca">Maraca</string>
    <string name="fox">Fox Sports</string>
    <string name="fourfourtwo">fourfour two</string>
    <string name="titletest">It could be 2005 all over again’ – Arsenal legend Ray Parlour tips Liverpool for Champions League glory</string>
    <string name="description">description</string>
    <string name="descriptiontest">Ray Parlour believes Liverpool could be on the road to their sixth Champions League crown after sailing past Manchester City and into the semi-finals. The Reds beat Pep Guardiola’s side for the third time this season, as goals from Mohamed Salah and Roberto F…</string>
    <string name="Details">Details</string>
    <string name="gotowebsite">go to web site</string>
    <string name="faild">No Internet connection !</string>

</resources>
