<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Player_cat"
    tools:context="com.example.android.realmadrid.News_Details">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingBottom="30dp"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="@string/titletest"
            android:textStyle="bold"
            android:id="@+id/titleDetailnews"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageOfDetailNews"
            tools:src="@drawable/test1"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Details"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/descriptiontest"
            android:id="@+id/Details"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/black"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/openwebsite"
            android:text="@string/gotowebsite"/>
    </LinearLayout>
</ScrollView>
